Basically a complete refactor, plus several improvements to bring down processing time:
- Add support for cmd-line ticket strip generation
- Collection shuffling is now centralised in a CollectionShuffler to
  avoid disparate calls to new Random(). This also helps tests to
  control randomness.
- Tickets are now pretty printed.
- Removed unused classes.
- Change from TreeSet to LinkedList in Ticket to store blank values.
- Closed off algorithm by adding blanks in each Ticket.
- Added JMH to test ticket strip generation performance (to add
  invocation via cmd line later)
- Added unit tests